me make cofeeeeeeeeeeeeeeeeee

--- a/coffee.html
+++ b/coffee.html
@@ -3,3 +3,15 @@
 </HEAD
 <BODY>
 <B> Cup of coffee </B>
+  <HR>
+  Steps to make a cup of coffee
+  <OL>
+  <LI> Select quality beans </LI>
+<LI> Grind the beans </LI> 
+    <LI> Measure the coffee </LI>
+    <LI> Control the water </LI>
+    <LI> Brew the coffee </LI>
+  </OL>
+</BODY>
+</HTML>
+
